--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,26 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+display: flex;
+padding-top: 25px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-right: 5px;
+}
+
+.value {
+  font-size: 28px;
+
+}
+
+.label {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bolder;
+}
